# spacebot-link

SpaceBotLink/assets/: cobot.glb
SpaceBotLink/src/: main.py
camera_publisher/: publisher.py  pyproject.toml  subscriber.py
spacebot_link/: pyproject.toml
spacebot_link/src/: avatar.py  camera_stream.py  intrinsics.py  main.py  sensor_bus.py  ui.py
