[project]
name = "camera-publisher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "opencv-python==4.8.1.78",
    "panda3d-gltf>=1.3.0",
    "pyzed>=1.3.0",
    "zmq>=0.0.0",
]

[tool.uv.sources]
pyzed = { path = "../../../../../usr/local/zed/pyzed-4.2-cp312-cp312-linux_x86_64.whl" }
