[project]
name = "spacebotlink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "glfw>=2.8.0",
    "moderngl>=5.12.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "panda3d>=1.10.15",
    "pyglm>=2.8.0",
    "zmq>=0.0.0",
]
